--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "google-maps-react": "^2.0.2",
     "mysql": "^2.18.1",
     "net": "^1.0.2",
     "react": "^16.13.1",
