--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-navigation": "^4.3.7",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "socket.io": "^2.3.0",
     "typescript": "^3.8.3"
   },
   "scripts": {
